--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,88 @@
 .intro {
-  background-color: lightcoral;
+  background-color: white;
+  display: flex;
+
+    .left{
+      flex: 0.5;
+      overflow: hidden;
+      
+      
+      
+      .imageContainer {
+        width: 800px;
+        height: 800px;
+        background-color: gold;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        float: right;
+        animation: scaleImg 5s alternate infinite;
+
+        img {
+          width: 60%;
+        }
+
+        @keyframes scaleImg {
+          to{
+            transform: scale(0.9);
+          }
+        }
+      }
+    }
+
+    .right{
+      flex: 0.5;
+      position: relative;
+
+      .wrapper {
+        width: 100%;
+        height: 100%;
+        padding-left: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+
+        h1{
+          font-size: 60px;
+          margin: 10px 0;
+
+        }
+
+        h2 {
+          font-style: 35px;
+        }
+        h3 {
+          font-size: 30px;
+
+          span {
+            color: crimson;
+          }
+        }
+      }
+
+      a{
+        position: absolute;
+        bottom: 10px;
+        left: 40%;
+        animation: transparence 2s infinite;
+
+
+        svg {
+          color: rgb(88, 87, 87);
+          width: 30px;
+          height: 30px;
+        }
+
+        @keyframes transparence {
+          to {
+            opacity: 0.3;
+          }
+        }
+      }
+      
+    }
+  
 }
