--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,5 @@
+@import '../../global.scss';
+
 .intro {
   background-color: white;
   display: flex;
@@ -11,24 +13,20 @@
       .imageContainer {
         width: 800px;
         height: 800px;
-        background-color: gold;
+        background-color: crimson;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         overflow: hidden;
         float: right;
-        animation: scaleImg 5s alternate infinite;
+        
 
         img {
           width: 60%;
         }
 
-        @keyframes scaleImg {
-          to{
-            transform: scale(0.9);
-          }
-        }
+        
       }
     }
 
@@ -67,7 +65,10 @@
         position: absolute;
         bottom: 10px;
         left: 40%;
+        border: 1px solid rgb(88, 87, 87);
+        border-radius: 50%;
         animation: transparence 2s infinite;
+        transition: all 0.3s ease;
 
 
         svg {
@@ -75,6 +76,15 @@
           width: 30px;
           height: 30px;
         }
+
+        &:hover {
+          transform: scale(1.3);
+          animation-play-state: paused;
+          transition: all 0.3s ease;
+          
+        }
+
+       
 
         @keyframes transparence {
           to {
