--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -18,6 +18,9 @@
   }
 
   ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     text-align: center;
     margin: 0;
@@ -28,11 +31,52 @@
 
     li {
       margin-bottom: 35px;
-
+      width: fit-content;
+      
       a {
         color: inherit;
         text-decoration: none;
         font-weight: lighter;
+        position: relative;
+       
+
+        .before{
+          
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background-color: white;
+          transform: translateX(-100%);
+          transition: all 0.3s ease;
+        }
+
+          .hover {
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background-color: white;
+          transform: translateX(0);
+          transition: all 0.3s ease;
+          }
+
+          .after {
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: white;
+            transform: translateX(100%);
+            transition: all 0.3s ease;
+          }
+
+       
+
+         
         
       }
       &:hover {
