--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -1,3 +1,48 @@
 .portefolio {
-  background-color: lightgoldenrodyellow;
+  background-color: white;
+  
+  h1 {
+    text-align: center;
+    font-size: 60px;
+    margin-top: 100px;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    position: relative;
+
+    .projet {
+      width: 350px;
+      height: 300px;
+      position: relative;
+      border: orange 1px solid;
+
+      img {
+        width: 100%;
+
+      }
+
+      .caption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: none;
+
+        video {
+          width: 100%;
+          
+
+        }
+      }
+
+      &:hover .caption {
+        
+        display: block;
+      }
+    }
+  }
 }
