--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .intro {
-  background-color: white;
+  background: linear-gradient(white, rgb(187, 185, 212));
   display: flex;
 
     .left{
