--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -1,47 +1,131 @@
 .portefolio {
-  background-color: white;
+  background: linear-gradient(rgb(187, 185, 212), rgb(96, 93, 139));
   
   h1 {
     text-align: center;
     font-size: 60px;
-    margin-top: 100px;
+    margin-top: 50px;
   }
 
   .grid {
+    max-width: 1300px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto, 1fr);
+    margin: 50px auto;
     gap: 20px;
     position: relative;
+    
 
     .projet {
-      width: 350px;
-      height: 300px;
+      margin: 0 auto;
+      width: 500px;
+      height: 280px;
       position: relative;
-      border: orange 1px solid;
+      overflow: hidden;
+      border-radius: 10px;
+      transform-style: preserve-3d;
+      cursor: pointer;
+      transition: all 2s ease;
+      
 
-      img {
+     .front {
+      overflow: hidden;
+      transition: all 0.5s ease;
+      
+
+      video {
         width: 100%;
-
+        height: 100%;
+        transition: all 0.5s ease;
+        border-radius: 10px;
       }
 
       .caption {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
-        display: none;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.7);
+        opacity: 0;
+        transform: scale(1.2);
+        transition: all 0.5s ease-in-out;
+        font-size: 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
 
-        video {
-          width: 100%;
-          
-
+        h2 {
+          font-size: 2rem;
+         
         }
+
+        .separation {
+          width: 2px;
+          height: 50px;
+          background-color: rgb(5, 5, 41);
+          margin: 15px;
+        }
+
+        p {
+          font-style: italic;
+        }
+
+      }
+     }
+      
+
+      &:hover video {
+        transform: scale(1.1);
       }
 
       &:hover .caption {
+        opacity: 1;
+        transform: scale(1);
+      }
+
+      
+
+    }
+
+    .turn {
+      transform: rotateY(180deg);
+    }
+
+  
+
+    .back {
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      padding: 20px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      transform: rotateY(180deg);
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      
+      p {
+        color: blue;
+        text-align: center;
+      }
+
+      h3 {
+        color: blue;
+        text-align: center;
+      }
+
+      .listes{
+        display: flex;
         
-        display: block;
+        justify-content: space-around;
+        margin: 20px;
       }
     }
   }
