--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -1,131 +1,99 @@
 .portefolio {
   background: linear-gradient(rgb(187, 185, 212), rgb(96, 93, 139));
-  
+
+
+
   h1 {
+    margin: 20px;
     text-align: center;
-    font-size: 60px;
-    margin-top: 50px;
+    font-size: clamp(35px, 7vw, 60px);
   }
 
-  .grid {
+  .galery {
     max-width: 1300px;
-    display: grid;
-    grid-template-columns: repeat(auto, 1fr);
-    margin: 50px auto;
-    gap: 20px;
-    position: relative;
-    
+    margin: 30px auto 0;
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
     .projet {
-      margin: 0 auto;
-      width: 500px;
-      height: 280px;
-      position: relative;
-      overflow: hidden;
-      border-radius: 10px;
-      transform-style: preserve-3d;
+      width: 450px;
+      height: 250px;
+      border-radius: 20px;
+      box-shadow: 5px 50px 20px 10px rgb(0, 0, 0);
       cursor: pointer;
-      transition: all 2s ease;
-      
 
-     .front {
-      overflow: hidden;
-      transition: all 0.5s ease;
-      
-
-      video {
+      .card {
         width: 100%;
         height: 100%;
-        transition: all 0.5s ease;
-        border-radius: 10px;
-      }
+        position: relative;
+        overflow: hidden;
 
-      .caption {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(255, 255, 255, 0.7);
-        opacity: 0;
-        transform: scale(1.2);
-        transition: all 0.5s ease-in-out;
-        font-size: 25px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        
+        .front {
+          width: 100%;
+          height: 100%;
+          position: relative;
 
-        h2 {
-          font-size: 2rem;
-         
+          video {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+          }
+
+          .caption {
+            display: flex;
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: rgb(187, 185, 212);
+            font-size: 25px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            opacity: 0;
+            transition: all 0.5s ease;
+
+            .caption-info {
+              transform: scale(0.8);
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              transition: all 0.5s ease ;
+
+              h2 {
+                font-style: italic;
+              }
+
+              .separation {
+                width: 2px;
+                height: 20px;
+                background-color: rgb(187, 185, 212);
+              }
+
+              .text-react {
+                margin-top: 10px;
+                color: rgb(0, 209, 247);
+              }
+            }
+          }
+          &:hover .caption {
+            opacity: 1;
+          }
+          &:hover .caption-info {
+            transform: scale(1);
+          }
+
+          
         }
-
-        .separation {
-          width: 2px;
-          height: 50px;
-          background-color: rgb(5, 5, 41);
-          margin: 15px;
-        }
-
-        p {
-          font-style: italic;
-        }
-
-      }
-     }
-      
-
-      &:hover video {
-        transform: scale(1.1);
-      }
-
-      &:hover .caption {
-        opacity: 1;
-        transform: scale(1);
-      }
-
-      
-
-    }
-
-    .turn {
-      transform: rotateY(180deg);
-    }
-
-  
-
-    .back {
-      width: 100%;
-      height: 100%;
-      box-sizing: border-box;
-      padding: 20px;
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      transform: rotateY(180deg);
-      width: 100%;
-      height: 100%;
-      background-color: white;
-      
-      p {
-        color: blue;
-        text-align: center;
-      }
-
-      h3 {
-        color: blue;
-        text-align: center;
-      }
-
-      .listes{
-        display: flex;
-        
-        justify-content: space-around;
-        margin: 20px;
       }
     }
   }
