--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -41,11 +41,13 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        
 
 
         h1{
           font-size: 60px;
           margin: 10px 0;
+          text-align: left;
 
         }
 
