--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -16,7 +16,6 @@
     z-index: 2;
     transition: all 0.8s ease;
     top: 0;
-    
     opacity: 0;
     transform: translate(-50%);
     animation: formAppaer 0.5s forwards;
@@ -25,7 +24,7 @@
   .anim-btn {
     position: absolute;
     background-color: black;
-    z-index: 2;
+    z-index: 3;
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -40,7 +39,7 @@
       transform: scale(1);
       transition: all 1s ease;
     }
-    
+
     &:active + .animation-form {
       transform: scale(0);
     }
@@ -60,18 +59,19 @@
   }
 
   .formulaire {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    font-family: 'Kaisei HarunoUmi', serif;
     color: white;
     z-index: 2;
-    
     position: absolute;
+    
     top: 0;
     bottom: 0;
     left: 0;
-    text-align: center;
+    right: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     transform: scale(0);
     transition: all 0.5s;
     animation: formAppaer 2s forwards;
@@ -83,16 +83,164 @@
       }
     }
 
-    .cancel-btn {
-      background-color: black;
-      z-index: 2;
+    .formulaire-titre {
+      position: relative;
+      text-align: center;
+      overflow: visible;
 
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      color: white;
-      border: 2px dashed white;
-      cursor: pointer;
+      h2 {
+        font-family: 'Kaisei HarunoUmi', serif;
+        font-size: clamp(34px, 9vw, 45px);
+        margin-bottom: 15px;
+      }
+
+      .cancel-btn {
+        background-color: black;
+        z-index: 2;
+        position: absolute;
+
+        top: 0px;
+        right: -150px;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        color: white;
+        border: 2px dashed white;
+        cursor: pointer;
+        transition: all 0.5s ease;
+
+        &:hover {
+          transform: rotate(180deg);
+          font-size: 40px;
+        }
+      }
+
+      p {
+        font-family: 'Kaisei HarunoUmi', serif;
+        font-size: clamp(18px, 3vw, 24px);
+        margin-bottom: 30px;
+      }
+    }
+
+    form {
+      font-family: 'Kaisei HarunoUmi', serif;
+      width: 50%;
+      display: flex;
+      flex-wrap: wrap;
+
+      label {
+        font-family: 'Kaisei HarunoUmi', serif;
+        display: flex;
+        flex-direction: column;
+        color: rgb(136, 121, 35);
+        text-transform: uppercase;
+      }
+
+      input:focus {
+        outline: none;
+      }
+
+      .container-firstline {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+
+        label {
+          font-size: clamp(14px, 2vw, 18px);
+          width: 48%;
+
+          input {
+            font-size: 18px;
+            font-weight: bolder;
+            margin: 10px 0;
+            padding: 5px;
+          }
+        }
+      }
+
+      .label-email {
+        width: 100%;
+        margin-bottom: 15px;
+        font-size: clamp(14px, 2vw, 18px);
+
+        input {
+          font-size: 18px;
+          font-weight: bolder;
+          margin: 10px 0;
+          padding: 5px;
+        }
+      }
+      .label-message {
+        width: 100%;
+        margin-bottom: 15px;
+        font-size: clamp(14px, 2vw, 18px);
+
+        textarea {
+          font-size: 18px;
+          font-weight: bolder;
+          margin: 10px 0;
+          padding: 5px;
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+
+      button {
+        font-family: 'Kaisei HarunoUmi', serif;
+        font-size: clamp(14px, 3vw, 18px);
+        margin: 0 auto;
+        padding: 15px 50px;
+        background-color: rgb(136, 121, 35);
+        color: white;
+        font-weight: bold;
+        text-transform: uppercase;
+        border: 1px solid transparent;
+        cursor: pointer;
+        transition: all 0.5s ease;
+
+        &:hover {
+          border: 1px solid white;
+          background-color: black;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .contact {
+    .formulaire {
+      .formulaire-titre {
+        position: static;
+
+        h2 {
+        }
+
+        .cancel-btn {
+          top: -40px;
+          right: -40px;
+          z-index: 3;
+
+          span {
+            display: block;
+            transform: translateX(-15px) translateY(15px);
+          }
+
+          &:hover {
+            background-color: white;
+            color: black;
+            transform: none;
+            font-size: 18px;
+          }
+        }
+      }
+
+      form {
+        width: 70%;
+      }
     }
   }
 }
