--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,7 @@
 .app {
   height: 100vh;
+  background: linear-gradient(white 30%, black);
+  
   h1 {
     margin: 20px;
     text-align: center;
@@ -19,10 +21,13 @@
       display: none;
     }
 
+   
+
     > * {
       width: 100vw;
       height: calc(100vh - 70px);
       scroll-snap-align: start;
+     
     }
   }
 }
