--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,101 +1,98 @@
 @import '../../global.scss';
 
 .intro {
-  background: linear-gradient(white, rgb(187, 185, 212));
+  /* background: linear-gradient(white, rgb(187, 185, 212)); */
   display: flex;
 
+  .left {
+    flex: 0.5;
+    overflow: hidden;
 
-    .left{
-      flex: 0.5;
+    .imageContainer {
+      width: 800px;
+      height: 800px;
+      background-color: crimson;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
-      
-      
-      
-      .imageContainer {
-        width: 800px;
-        height: 800px;
-        background-color: crimson;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        float: right;
-        
+      float: right;
 
-        img {
-          width: 60%;
+      img {
+        width: 60%;
+      }
+    }
+  }
+
+  .right {
+    flex: 0.5;
+    position: relative;
+
+    .wrapper {
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      h1 {
+        font-size: 60px;
+        margin: 10px 0;
+        text-align: left;
+      }
+
+      h2 {
+        font-style: 35px;
+      }
+      h3 {
+        font-size: 30px;
+
+        span {
+          color: crimson;
         }
-
-        
       }
     }
 
-    .right{
-      flex: 0.5;
-      position: relative;
+    .container-lien {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      bottom: 15px;
+      left: 50%;
+      border-radius: 50%;
+ 
+      transform: translate(-50%);
+      background-color: white;
+      box-shadow: 0 0 0 0 white;
+      cursor: pointer;
+      animation: pulse 1.3s infinite;
+      transition: all 0.2s linear;
 
-      .wrapper {
+      &:hover {
+        background-color: black;
+      }
+      &:hover svg{
+        color: white;
+      }
+
+      a {
         width: 100%;
         height: 100%;
-        padding-left: 50px;
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        
-
-
-        h1{
-          font-size: 60px;
-          margin: 10px 0;
-          text-align: left;
-
-        }
-
-        h2 {
-          font-style: 35px;
-        }
-        h3 {
-          font-size: 30px;
-
-          span {
-            color: crimson;
-          }
-        }
-      }
-
-      a{
-        position: absolute;
-        bottom: 10px;
-        left: 40%;
-        border: 1px solid rgb(88, 87, 87);
-        border-radius: 50%;
-        animation: transparence 2s infinite;
-        transition: all 0.3s ease;
-
-
+        align-items: center;
         svg {
-          color: rgb(88, 87, 87);
-          width: 30px;
-          height: 30px;
-        }
-
-        &:hover {
-          transform: scale(1.3);
-          animation-play-state: paused;
-          transition: all 0.3s ease;
-          
-        }
-
-       
-
-        @keyframes transparence {
-          to {
-            opacity: 0.3;
-          }
+          color: black;
         }
       }
-      
+
+      @keyframes pulse {
+        to {
+          box-shadow: 0 0 10px 0.8rem rgba(255, 255, 255, 0.01);
+        }
+      }
     }
-  
+  }
 }
