--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -1,92 +1,134 @@
 .portefolio {
-  background: linear-gradient(rgb(187, 185, 212), rgb(96, 93, 139));
+  position: relative;
 
-
-
-  .galery {
-    max-width: 1300px;
-    margin: 30px auto 0;
-    padding: 0 20px;
+  .categories {
+    padding: 0;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    margin: 20px;
 
-    .projet {
-      width: 450px;
-      height: 250px;
-      border-radius: 20px;
-      box-shadow: 5px 50px 20px 10px rgb(0, 0, 0);
+    li {
+      width: 50px;
+      height: 25px;
+      background-color: crimson;
+      /* background-color: rgb(83, 83, 165); */
+      text-align: center;
+      margin: 20px;
+      padding: 10px;
+      border-radius: 10px;
       cursor: pointer;
 
-      .card {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        overflow: hidden;
-
-        .front {
-          width: 100%;
-          height: 100%;
-          position: relative;
-
-          video {
-            position: absolute;
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 100%;
-          }
-
-          .caption {
-            display: flex;
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: rgb(187, 185, 212);
-            font-size: 25px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            opacity: 0;
-            transition: all 0.5s ease;
-
-            .caption-info {
-              transform: scale(0.8);
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              align-items: center;
-              transition: all 0.5s ease;
-
-              h2 {
-                font-style: italic;
-              }
-
-              .separation {
-                width: 2px;
-                height: 20px;
-                background-color: rgb(187, 185, 212);
-              }
-
-              .text-react {
-                margin-top: 10px;
-                color: rgb(0, 209, 247);
-              }
-            }
-          }
-          &:hover .caption {
-            opacity: 1;
-          }
-          &:hover .caption-info {
-            transform: scale(1);
-          }
-        }
+      &:hover {
+        background-color: white;
+        color: rgb(83, 83, 165);
       }
     }
   }
+  .rec-carousel-wrapper {
+    width: 100%;
+    padding-top: 10px;
+    margin: 0 auto;
+    
+    
+  }
+  .rec-slider-container{
+    cursor: grab;
+    transition: all 0.1s ease;
+
+    &:active {
+      cursor: grabbing;
+      transform: scale(0.95);
+    }
+  }
+  .khvUfi {
+    &:hover:enabled, &:focus:enabled {
+      background-color: crimson;
+    }
+  }
+
+  .projet {
+    margin: 10px 0 30px 0;
+    width: 500px;
+    height: 250px;
+    background-color: black;
+    overflow: hidden;
+    box-shadow: 20px 12px 20px 10px rgb(83, 83, 165);
+    cursor: pointer;
+    position: relative;
+
+
+    &:hover .caption{
+      opacity: 1;
+    }
+    video {
+      width: 100%;
+    }
+
+    .caption {
+      opacity: 0;
+      background-color: rgba(255, 255, 255, 0.5);
+      position: absolute;
+      
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+
+      .front {
+        position: absolute;
+        background-color: crimson;
+
+        ul {
+          margin: 0;
+          padding: 0;
+        }
+      }
+
+      .back {
+
+      }
+
+
+    }
+  }
+  .container-lien {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 15px;
+    left: 50%;
+    border-radius: 50%;
+
+    transform: translate(-50%);
+    background-color: white;
+    box-shadow: 0 0 0 0 white;
+    cursor: pointer;
+    animation: pulse 1.3s infinite;
+    transition: all 0.2s linear;
+
+    &:hover {
+      background-color: black;
+    }
+    &:hover svg{
+      color: white;
+    }
+
+    a {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      svg {
+        color: black;
+      }
+    }
+
+    @keyframes pulse {
+      to {
+        box-shadow: 0 0 10px 0.8rem rgba(255, 255, 255, 0.01);
+      }
+    }
+  }
+
 }
