--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,11 @@
 .app {
   height: 100vh;
-  background: linear-gradient(white 30%, black);
+  background: linear-gradient(white 30%, rgb(95, 95, 163));
   
   h1 {
-    margin: 20px;
+    /* margin: 20px; */
     text-align: center;
-    font-size: clamp(35px, 7vw, 60px);
+    font-size: clamp(35px, 6vw, 90px);
   }
 
   .sections {
