--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -1,22 +1,31 @@
 .portefolio {
   position: relative;
 
+  .first-block {
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
   .categories {
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    margin: 20px;
 
     li {
-      width: 50px;
-      height: 25px;
-      background-color: crimson;
-      /* background-color: rgb(83, 83, 165); */
-      text-align: center;
-      margin: 20px;
-      padding: 10px;
+      background-color: rgb(83, 83, 165);
+      margin: 8px 20px;
+      padding: 5px 10px;
       border-radius: 10px;
       cursor: pointer;
+      font-size: clamp(14px, 1.2vw, 40px);
+      font-style: italic;
+      font-weight: bold;
+      color: white;
 
       &:hover {
         background-color: white;
@@ -24,73 +33,123 @@
       }
     }
   }
-  .rec-carousel-wrapper {
+
+  /* carousel */
+
+  .carousel {
     width: 100%;
-    padding-top: 10px;
-    margin: 0 auto;
-    
-    
-  }
-  .rec-slider-container{
-    cursor: grab;
-    transition: all 0.1s ease;
-
-    &:active {
-      cursor: grabbing;
-      transform: scale(0.95);
-    }
-  }
-  .khvUfi {
-    &:hover:enabled, &:focus:enabled {
-      background-color: crimson;
-    }
-  }
-
-  .projet {
-    margin: 10px 0 30px 0;
-    width: 500px;
-    height: 250px;
-    background-color: black;
-    overflow: hidden;
-    box-shadow: 20px 12px 20px 10px rgb(83, 83, 165);
-    cursor: pointer;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
     position: relative;
-
-
-    &:hover .caption{
-      opacity: 1;
-    }
-    video {
+  }
+  .carousel-container {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: red;
+    ul {
       width: 100%;
-    }
-
-    .caption {
-      opacity: 0;
-      background-color: rgba(255, 255, 255, 0.5);
-      position: absolute;
-      
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-
-      .front {
-        position: absolute;
-        background-color: crimson;
-
-        ul {
-          margin: 0;
-          padding: 0;
-        }
-      }
-
-      .back {
-
-      }
-
-
+      height: 100%;
     }
   }
+
+  .carousel-item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    perspective: 1000px;
+    background-color: black;
+    
+    
+  }
+
+  .double-face {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 98%;
+    }
+  }
+
+  .react-multiple-carousel__arrow--right{
+    right: calc(0% + 1px);
+  }
+  .react-multiple-carousel__arrow--left{
+    left: calc(0% + 1px);
+  }
+
+  /* Items */
+
+  /* .slider {
+    width: 600px;
+    height: 300px;
+    margin: 0 auto 0;
+    background-color: white;
+    position: relative;
+    
+ 
+  }
+  .cont-slider {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cont-slider img {
+    width: 80%;
+    height: fit-content;
+    position: absolute;
+  }
+
+  .commandes {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
+  .commandes button {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .commandes button:nth-child(1){
+    top: 50%;
+    transform: translateY(-50%);
+    left: 5px;
+    z-index: 1000;
+  }
+
+  .commandes button:nth-child(2){
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5px;
+  } */
+
   .container-lien {
     position: absolute;
     width: 50px;
@@ -109,7 +168,7 @@
     &:hover {
       background-color: black;
     }
-    &:hover svg{
+    &:hover svg {
       color: white;
     }
 
@@ -130,5 +189,4 @@
       }
     }
   }
-
 }
