--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,4 +1,4 @@
-@import "../../global.scss";
+@import '../../global.scss';
 
 .topbar {
   width: 100%;
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-between;
 
-    .left{
+    .left {
       display: flex;
       align-items: center;
 
@@ -47,7 +47,6 @@
     }
 
     .right {
-
       .hamburger {
         width: 32px;
         height: 27px;
@@ -56,7 +55,7 @@
         justify-content: space-between;
         cursor: pointer;
 
-        span{
+        span {
           width: 100%;
           height: 3px;
           background-color: $mainColor;
@@ -72,18 +71,38 @@
     color: white;
 
     .hamburger {
-
       span {
         &:first-child {
           background-color: white;
-          transform: rotate(45deg)
+          transform: rotate(45deg);
         }
         &:nth-child(2) {
           opacity: 0;
         }
         &:last-child {
           background-color: white;
-          transform: rotate(-45deg)
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .topbar {
+    .wrapper {
+      .left {
+        .logo {
+        }
+
+        .itemContainer {
+          display: none;
+
+          .icon {
+          }
+
+          span {
+          }
         }
       }
     }
