--- a/src/components/portefolio/carousel.scss
+++ b/src/components/portefolio/carousel.scss
@@ -4,12 +4,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  
   /* background-color: rgba(255, 255, 255, 0.5); */
   
 
   .slider {
-    width: 90vw;
-    height: 100%;
+    width: 85vw;
+    height: 35vh;
+    
     /* background: linear-gradient(rgba(255, 255, 255, 0.5), rgb(130, 145, 214))  */
     
     /* overflow-x: visible; */ 
@@ -35,78 +38,39 @@
     transition: transform 0.5s ease;
   }
 
-  .item {
-    width: 30vw;
-    padding: 20px 10px;
-    perspective: 1500px;
-    overflow-y: hidden;
-  }
+  
 
-  .double-face {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.5s ease-in-out;
-    transform-style: preserve-3d;
-    cursor: pointer;
-    
-    
-  }
-
-  .face,
-  .arriere {
-    
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  }
-
-  .face {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .face img {
-    width: 100%;
-    height: 100%;
-  }
-
-  .arriere {
-    transform: rotateY(90deg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0.5;
-    background-color: #333;
-    font-size: 80px;
-  }
-
-  .active-item {
-    transform: rotateY(180deg);
-  }
-
-  .active-slider {
-    transform: translateX(-50%);
-  }
 
   /* Fleches */
 
    .previous,
   .next {
     position: absolute;
-    width: clamp(25px, 6vw, 40px);
-    height: clamp(25px, 6vw, 40px);
+    width: clamp(30px, 3vw, 80px);
+    height: clamp(30px, 3vw, 80px);
     border-radius: 50%;
-    background-color: white;
+    background-color: rgba(255 , 250, 250, 0.5);
     top: 50%;
     transform: translateY(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: all 0.2s;
+    outline: none;
+    border: 1px rgb(83,83,165) dashed;
+  }
+
+  
+
+  .previous:hover,
+  .next:hover {
+    background-color: rgb(83,83,165);
+  }
+
+  .previous:hover,
+  .next:hover svg {
+    color: white;
   }
 
   .previous {
@@ -116,4 +80,16 @@
   .next {
     right: 1px;
   } 
+}
+
+@media screen and (max-width: 769px) {
+  .carousel .item {
+    width: 45vw;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 586px) {
+  .carousel .item {
+    width: 90vw;
+  }
 }
