--- a/src/components/portefolio/portefolio.scss
+++ b/src/components/portefolio/portefolio.scss
@@ -3,7 +3,7 @@
 
   .first-block {
     width: 100%;
-    height: 30vh;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -15,6 +15,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 10vh;
+    margin-bottom: 20px;
+
 
     li {
       background-color: rgb(83, 83, 165);
@@ -31,6 +34,11 @@
         background-color: white;
         color: rgb(83, 83, 165);
       }
+
+    }
+    .active-link {
+      background-color: white;
+      color: rgb(83, 83, 165);
     }
   }
 
