--- a/src/components/portefolio/categCarousel.scss
+++ b/src/components/portefolio/categCarousel.scss
@@ -22,7 +22,7 @@
       color: rgb(83, 83, 165);
     }
   }
-  .active-link {
+  .active-categ {
     background-color: white;
     color: rgb(83, 83, 165);
   }
