--- a/src/components/portefolio/btnCarousel.scss
+++ b/src/components/portefolio/btnCarousel.scss
@@ -1,5 +1,6 @@
 /* Fleches */
 .commandes {
+  
   .previous,
   .next {
     position: absolute;
@@ -8,7 +9,7 @@
     border-radius: 50%;
     background-color: rgba(255, 250, 250, 0.5);
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-50%) scale(1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,6 +17,8 @@
     transition: all 0.2s;
     outline: none;
     border: 1px rgb(83, 83, 165) dashed;
+    
+    transition: 0.5s transform;
   }
 
   .previous:hover,
@@ -29,10 +32,14 @@
   }
 
   .previous {
-    left: 1px;
+    left: 2%;
   }
 
   .next {
-    right: 1px;
+    right: 2%;
+  }
+
+  .reset-btn {
+    transform: translateY(-50%) scale(0);
   }
 }
