--- a/src/components/portefolio/carousel.scss
+++ b/src/components/portefolio/carousel.scss
@@ -1,5 +1,9 @@
 .carousel {
-  
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  overflow-y: hidden;
   .carousel-container {
     width: 100vw;
     height: 35vh;
@@ -48,27 +52,7 @@
   
     /* Cercles */
 
-    .cercles-container {
-      position: absolute;
-      width: 100%;
-      height: 20px;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      span {
-        text-align: center;
-        border-radius: 50%;
-
-        margin-left: 20px;
-        font-size: 14px;
-      }
-
-      .active-cercle {
-        color: blue;
-      }
-    }
+  
   }
 }
 
