--- a/src/components/portefolio/cercleCarousel.scss
+++ b/src/components/portefolio/cercleCarousel.scss
@@ -2,22 +2,19 @@
   position: absolute;
   width: 100%;
   height: 20px;
-  bottom: 12px;
+  bottom: 9%;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 1;
-  transition: all 10s;
 
   .span-container {
-
     width: 50px;
     height: 100%;
-   
+
     margin: 0 10px;
     cursor: pointer;
     position: relative;
-    
+
     span {
       position: absolute;
       width: 100%;
@@ -25,11 +22,11 @@
       background-color: white;
       top: 50%;
       transform: translateY(-50%);
-     
+      opacity: 1;
     }
   }
 
-  .active-cercle span{
+  .active-cercle span {
     background-color: blue;
   }
 }
