--- a/src/global.scss
+++ b/src/global.scss
@@ -1,2 +1,7 @@
-$mainColor: rgb(83, 83, 165);
+$colorBackgroundGeneral: #201e20;
+$colorFontGeneral: white;
+$colorFontMenu: #333;
+$secondaryColor: #e0a96d;
+$thirdColor : #ddc3a5;
+$colorInputForm : rgb(228, 225, 225);
 
