--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,11 @@
+@import "./global.scss";
+
 .app {
   height: 100vh;
-  background: linear-gradient(white 30%, rgb(95, 95, 163));
+  /* background: linear-gradient(white 30%, rgb(95, 95, 163)); */
+  /* background-color: rgb(31, 31, 31); */
+  background-color: $colorBackgroundGeneral;
+  color: $colorFontGeneral;
   
   h1 {
     /* margin: 20px; */
