--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -11,7 +11,7 @@
     .imageContainer {
       width: 800px;
       height: 800px;
-      background-color: crimson;
+      background-color: $secondaryColor;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -50,7 +50,7 @@
         font-size: 30px;
 
         span {
-          color: crimson;
+          color: $secondaryColor;
         }
       }
     }
