--- a/src/components/portefolio/btnCarousel.scss
+++ b/src/components/portefolio/btnCarousel.scss
@@ -1,3 +1,4 @@
+@import '../../global.scss';
 /* Fleches */
 .commandes {
   
@@ -7,7 +8,7 @@
     width: clamp(30px, 3vw, 80px);
     height: clamp(30px, 3vw, 80px);
     border-radius: 50%;
-    background-color: rgba(255, 250, 250, 0.5);
+    background-color: black;
     top: 50%;
     transform: translateY(-50%) scale(1);
     display: flex;
@@ -15,20 +16,23 @@
     align-items: center;
     cursor: pointer;
     transition: all 0.2s;
-    outline: none;
-    border: 1px rgb(83, 83, 165) dashed;
-    
-    transition: 0.5s transform;
+    border: none;
+    transition: 0.5s all;
+  }
+
+  .previous,
+  .next svg {
+    color: white;
   }
 
   .previous:hover,
   .next:hover {
-    background-color: rgb(83, 83, 165);
+    background-color: $secondaryColor;
   }
 
   .previous:hover,
   .next:hover svg {
-    color: white;
+    color: black;
   }
 
   .previous {
