--- a/src/components/portefolio/categCarousel.scss
+++ b/src/components/portefolio/categCarousel.scss
@@ -1,3 +1,4 @@
+@import "./../../global.scss";
 .categories {
   padding: 0;
   display: flex;
@@ -7,7 +8,7 @@
   margin-bottom: 20px;
 
   li {
-    background-color: rgb(83, 83, 165);
+    background-color: $secondaryColor;
     margin: 8px 20px;
     padding: 5px 10px;
     border-radius: 10px;
@@ -15,15 +16,15 @@
     font-size: clamp(14px, 1.1vw, 40px);
     font-style: italic;
     font-weight: bold;
-    color: white;
+    color: black;
 
     &:hover {
       background-color: white;
-      color: rgb(83, 83, 165);
+      color: $colorFontMenu;
     }
   }
   .active-categ {
     background-color: white;
-    color: rgb(83, 83, 165);
+    color: black;
   }
 }
