--- a/src/components/portefolio/cercleCarousel.scss
+++ b/src/components/portefolio/cercleCarousel.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .cercles-container {
   position: absolute;
   width: 100%;
@@ -14,19 +16,27 @@
     margin: 0 10px;
     cursor: pointer;
     position: relative;
+    
+    &:hover span {
+      background-color: black;
+    }
 
     span {
       position: absolute;
       width: 100%;
       height: 30%;
-      background-color: white;
+      background-color: $colorFontMenu;
       top: 50%;
       transform: translateY(-50%);
       opacity: 1;
+
     }
   }
 
   .active-cercle span {
-    background-color: blue;
+    background-color: $thirdColor;
+  }
+  .active-cercle:hover span {
+    background-color: $secondaryColor;
   }
 }
