--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,12 +3,13 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: white;
-  color: $mainColor;
+  background-color: $colorBackgroundGeneral;
+  color: $colorFontGeneral;
   position: fixed;
   top: 0;
   z-index: 4;
   transition: all 0.8s ease;
+  
 
   .wrapper {
     padding: 0 30px;
@@ -48,6 +49,7 @@
 
     .right {
       .hamburger {
+    
         width: 32px;
         height: 27px;
         display: flex;
@@ -58,7 +60,7 @@
         span {
           width: 100%;
           height: 3px;
-          background-color: $mainColor;
+          background-color: white;
           transform-origin: left;
           transition: all 1s ease;
         }
@@ -67,8 +69,8 @@
   }
 
   &.active {
-    background-color: $mainColor;
-    color: white;
+  /*   background-color: $thirdColor;
+    color: black; */
 
     .hamburger {
       span {
