--- a/src/components/contact/formulaire.scss
+++ b/src/components/contact/formulaire.scss
@@ -49,9 +49,17 @@
       border: 2px dashed $thirdColor;
       cursor: pointer;
       transition: all 0.5s ease;
+      opacity: 0;
       display: flex;
       justify-content: center;
       align-items: center;
+      animation: btn-cancel 2s 2s forwards;
+
+      @keyframes btn-cancel {
+        to {
+          opacity: 1;
+        }
+      }
 
       
 
@@ -81,9 +89,9 @@
       }
     }
 
-    p {
+    .text-intro-contact {
       font-family: "Kaisei HarunoUmi", serif;
-      font-size: clamp(18px, 3vw, 24px);
+      font-size: clamp(14px, 2vw, 24px);
       margin-bottom: 30px;
     }
   }
@@ -181,3 +189,51 @@
     }
   }
 }
+
+@media screen and (max-width: 1100px) {
+  
+    .formulaire {
+      .formulaire-titre {
+        position: static;
+
+        h2 {
+        }
+
+        .cancel-btn {
+          top: -40px;
+          right: -40px;
+    
+    
+          span {
+          position: absolute;
+          bottom: 20%;
+          left: 20%;
+          }
+          svg {
+            transition: all 0.5s ease;
+          }
+    
+          &:hover {
+            transform: scale(1.2);
+            background-color: $secondaryColor;
+            
+          }
+          &:hover span {
+            transform: scale(1.2);
+            transition: all 0.5s ease;
+          }
+          &:hover span svg {
+            color: black;
+            transition: all 0.5s ease;
+            
+          }
+        }
+      }
+
+      form {
+        width: 70%;
+      }
+    }
+  }
+
+
