--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,8 +1,12 @@
 @import '../../global.scss';
 
 .intro {
-  /* background: linear-gradient(white, rgb(187, 185, 212)); */
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -37,10 +41,19 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
         margin: 10px 0;
         text-align: left;
+
+        @include mobile {
+          font-size: 40px;
+        }
       }
 
       h2 {
@@ -48,6 +61,10 @@
       }
       h3 {
         font-size: 30px;
+        @include mobile {
+          font-size: 20px;
+          
+        }
 
         span {
           color: $secondaryColor;
