--- a/src/components/portefolio/projets.scss
+++ b/src/components/portefolio/projets.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .item {
   width: 28.333vw;
   height: 100%;
@@ -6,6 +8,7 @@
   opacity: 0;
   transform: translateY(-50px);
   animation: apparition 0.8s forwards;
+  overflow: visible;
   
 
   @keyframes apparition {
@@ -21,22 +24,26 @@
     height: 100%;
     transition: transform 0.5s ease-in-out;
     transform-style: preserve-3d;
+    
     cursor: pointer;
+    overflow: visible;
+    
   }
 
-  .face,
-  .arriere {
+  .double-face__face {
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+
+     
   }
 
   .face {
     display: flex;
     justify-content: center;
     align-items: center;
+    
   }
 
   .face img {
@@ -45,16 +52,78 @@
   }
 
   .arriere {
-    transform: rotateY(90deg);
+    font-size: 16px;
+    transform: rotateY(180deg);
+    background-color: $thirdColor;
+    color: black;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    opacity: 0.5;
-    background-color: #333;
-    font-size: 80px;
+    justify-content: space-around;
+    cursor: alias;
+    padding: 5px;
+
+    @include mobile {
+      font-size: 14px;
+    }
+
+    .list-categories-projet {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+
+      @include mobile {
+        flex-direction: column;
+      }
+
+      .container-li {
+        
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+      }
+
+      .categorie-projet {
+        background-color: $secondaryColor;
+        color: black;
+        padding: 5px;
+        border-radius: 10px;
+      }
+    }
+
+    .description-projet {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h4 {
+        font-size: 18px;
+      }
+    }
+
+    .link-projet {
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.2s;
+
+      &:hover {
+        color: $secondaryColor;
+        background-color: black;
+        padding: 5px;
+        border-radius: 10px;
+      }
+    }
+
+    
+    
   }
 
   .active-item {
-    transform: rotateY(180deg) scale(1.05);
+    transform: rotateY(180deg) ;
   }
 }
